# team-12-app

./: .env.sample  .gitignore  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  deploy.env  gc.env  gc.env.sample  gcloud.env.sample  ngrok.yml  package-lock.json  package.json
backend/: Image_API.md  Image_Analyze_API.md  Post_API.md  README.md  Search_API.md  pyproject.toml
backend/sql/: image.sql  post.sql
backend/src/: README.md  app.py
backend/src/dummy_data/: dummy_data_generator.py
backend/src/examples/: example_db_direct_connect.py.py  example_db_with_utils.py  example_delete_posts_and_images.py  example_generate_strage_url_v4.py  example_get_locationi.py  example_image.py  example_image_analyze.py  example_image_analyze_v2.py  example_img_analyze.py  example_post.py  example_post_search.py  example_post_with_image.py  example_text_search.py  image_example.py
backend/src/examples/template/: example_delete_posts_and_images.html  example_image.html  example_image_analyze.html  example_img_analyze.html  example_post.html  example_post_search.html  example_post_with_image.html  example_text_search.html  image_test.html
backend/src/routes/: image_route.py  img_analyze_route.py  post_route.py  search_route.py
backend/src/services/ai/: analyze.py  gemini_client.py
backend/src/services/image/: image.py
backend/src/services/images/: image.py  uploader.py
backend/src/services/post/: post.py
backend/src/test/: test_env.py  test_image.py  test_post.py
backend/src/test/ai/: test_analyze.py  (+4 more)
backend/src/utils/: config.py  image_processing.py
(+186 files in other folders)
